űrlap elem szélesség és magasság módosítása

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </form>
             </div>
         </div>
-        <video id="main-bg" poster="./assets/BGPoster.jpg" autoplay muted loop>
+        <video id="main-bg" poster="./assets/BGPoster.jpg" autoplay muted>
             <source src="./assets/BG.mp4" type="video/mp4">
         </video>
     </div>
