--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
                     <label class="bird">Bird</label>
                 </form>
             </div>
+
+            <div style="height: 100px; width: 300px; background-color: red;">
+                <h1 style="color:white">Én egy bolha vagyok. Piros fehér bolha.</h1>
+            </div>
         </div>
         <video id="main-bg" poster="./assets/BGPoster.jpg" autoplay muted>
             <source src="./assets/BG.mp4" type="video/mp4">
