--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
 
             <div style="height: 100px; width: 300px; background-color: red;">
-                <h1 style="color:white">Én egy bolha vagyok. Piros fehér bolha.</h1>
+                <h1 style="color:white">Én egy bolha vagyok. Piros fehér bolha. Halo.</h1>
             </div>
         </div>
         <video id="main-bg" poster="./assets/BGPoster.jpg" autoplay muted>
